# skin-cancer-detection

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  skin_cancer_detection_lab.ipynb
